devops/Docker/Caronte/proyectos/pcarmen/deploy/kubernetes/deploy-carmen.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: carmen-deployment
  namespace: proyectocarmen
spec:
  replicas: 2
  selector:
    matchLabels:
      app: webcarmen
  template:
    metadata:
      labels:
        app: webcarmen
    spec:
      containers:
        - name: webcarmen
          image: carmen24/pcarmen:latest
          imagePullPolicy: Always
          ports:
            - containerPort: 80
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "256Mi"
