devops/Docker/Caronte/proyectos/pcarmen/deploy/kubernetes/service-carmen.yml
apiVersion: v1
kind: Service
metadata:
  name: carmen-service
  namespace: proyectocarmen
spec:
  selector:
    app: webcarmen
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: ClusterIP
