devops/Docker/Caronte/proyectos/pcarmen/deploy/kubernetes/ingress-carmen.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: carmen-ingress
  namespace: proyectocarmen
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: www.carmen.es
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: carmen-service
                port:
                  number: 80
